src/objects/CampaignRules__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Rules to set campaigns</description>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_GMV__c</fullName>
        <label>Ending GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <label>Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_GMV__c</fullName>
        <label>Starting GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Campaign Rules</label>
</CustomObject>